plugins {
  id 'java'
  id 'me.champeau.jmh' version '0.6.6'
}

group = 'by.mark'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
  mavenCentral()
}

ext {
  jhmVersion = '1.35'
  jacksonVersion = '2.13.3'
}

dependencies {
  jmh "org.openjdk.jmh:jmh-core:$jhmVersion"
  jmh "org.openjdk.jmh:jmh-generator-annprocess:$jhmVersion"

  jmh "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
  jmh "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
  jmh "com.fasterxml.jackson.module:jackson-module-blackbird:$jacksonVersion"
  jmh "com.fasterxml.jackson.module:jackson-module-afterburner:$jacksonVersion"
}

jmh {
  iterations = 7
  warmupIterations = 5
  humanOutputFile = project.file("${project.buildDir}/results/jmh/human.txt") // human-readable output file
  resultsFile = project.file("${project.buildDir}/results/jmh/results.txt") // results file
  profilers = ['org.openjdk.jmh.profile.GCProfiler']
}

tasks.named('test') {
  useJUnitPlatform()
}

tasks.withType(JavaExec) {
  enableAssertions = true
  jvmArgs = ['-Xmx1g', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
}
